hphp/hack/test/typecheck/memoize/type_const_bad.php.exp
File "type_const_bad.php", line 10, characters 40-41:
Parameters to memoized function must be null, bool, int, float, string, an object deriving IMemoizeParam, or a Container thereof. See also http://docs.hhvm.com/hack/attributes/special#__memoize (Typing[4149])
File "type_const_bad.php", line 8, characters 20-22:
This is an object of type Bar
File "type_const_bad.php", line 10, characters 30-38:
  resulting from expanding the type constant this::TID
